--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "th-pattern-library",
+  "name": "web-prodution-pattern-library",
   "version": "1.0.0",
   "description": "Nuxt.js + Vuetify.js project",
   "author": "Chris Roselli <chrisroselli@gmail.com>",
